optimizer, timer, refactoring
* refactored some instances of the code; removed duplicated functions and some single use classes (Pair)
* obj data writing now uses decimal format to trim tailing zeroes
* added an optimization step to the model, allowing for better compressed files
* added elapsed time logs to profile the conversion steps